--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,32 @@
     line-height: auto;
     text-decoration: none;
 }
+
+main {
+    background-color: #F3F3F3;
+    padding: 130px 0;
+}
+
+.mini-title{
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    color: #181818;
+}
+
+.mini-text{
+    font-size: 18px;
+    font-weight: 400;
+    color: #757575;
+    line-height: 30px;
+    margin: 30px 0;
+    text-align: center; 
+}
+
+.internal{
+    max-width: 827px;
+    margin: 0 auto;
+}
 /* Individual Styles */
 
 
@@ -158,29 +184,10 @@ header{
 
 #about {
     background-color: #FFF8F3;
+    padding: 131px 0;
+    border-radius: 5px;
     max-width: 1140px;
-    width: 100%;
     margin: 0 auto;
-}
-
-.internal{
-    max-width: 827px;
-    margin: 0 auto;
-}
-
-#about-section h5{
-    font-size: 35px;
-    font-weight: 700;
-    text-align: center;
-    color: #181818;
-}
-
-#about-section p{
-    font-size: 18px;
-    font-weight: 400;
-    color: #757575;
-    line-height: 30px;
-    text-align: center; 
 }
 
 #about-section ul{
@@ -200,4 +207,42 @@ header{
 #about-section ul li span{
     font-weight: 700;
     display: block;
+}
+
+/* What I Do Section */
+#what-i-do{
+    padding: 130px 0;
+}
+
+#what-i-do section{
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.skill-set{
+    padding: 30px 42px 30px 36px;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.skill-set figure img{
+    display: block;
+}
+
+.skill-set figure figcaption{
+    font-size: 20px;
+    font-weight: 700;
+    color: #181818;
+    line-height: auto;
+    margin: 30px 0 20px;
+}
+
+.skill-set p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    color: #757575;
 }
